--- a/app/views/scripts/task/index.phtml
+++ b/app/views/scripts/task/index.phtml
@@ -7,20 +7,104 @@ arsort($allTasks);
 ?>
 
 <div class="container mx-auto">
-  <?php foreach ($allTasks as $task) : ?>
-    <div class="bg-white shadow rounded-lg p-6 mb-4">
-      <h2 class="text-xl font-semibold">Task ID: <?php echo $task->id; ?></h2>
-      <p class="text-gray-700">
-        <strong>Task Name:</strong> <?php echo $task->name; ?><br>
-        <strong>Username:</strong> <?php echo $task->username; ?><br>
-        <strong>Created Time:</strong> <?php echo $task->create_time; ?><br>
-        <strong>Completed Time:</strong> <?php echo $task->completed_time ?? 'Not completed'; ?><br>
-        <br />
-        <br />
-      </p>
-
-      <a href="/task/destroy/<?php echo $task->id; ?>" class="bg-red-500 text-white p-2 rounded">Eliminar Tasca</a>
-
+  <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <div class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
+      <div>
+        <!-- Dropdown menu -->
+        <div id="dropdownAction" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+          <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownActionButton">
+            <li>
+              <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reward</a>
+            </li>
+            <li>
+              <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Promote</a>
+            </li>
+            <li>
+              <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Activate account</a>
+            </li>
+          </ul>
+          <div class="py-1">
+            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete User</a>
+          </div>
+        </div>
+      </div>
+      <label for="table-search" class="sr-only">Search</label>
+      <div class="relative">
+        <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
+          <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+          </svg>
+        </div>
+        <input type="text" id="table-search-users" class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search for users">
+      </div>
     </div>
-  <?php endforeach; ?>
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+      <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+        <tr>
+          <th scope="col" class="p-4">
+            <div class="flex items-center">
+              <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+              <label for="checkbox-all-search" class="sr-only">checkbox</label>
+            </div>
+          </th>
+          <th scope="col" class="px-6 py-3">
+            Task ID
+          </th>
+          <th scope="col" class="px-6 py-3">
+            Task Name
+          </th>
+          <th scope="col" class="px-6 py-3">
+            Username
+          </th>
+          <th scope="col" class="px-6 py-3">
+            Created Time
+          </th>
+          <th scope="col" class="px-6 py-3">
+            Completed Time
+          </th>
+
+          <th scope="col" class="px-6 py-3">
+          Status
+          </th>
+          <th scope="col" class="px-6 py-3">
+            Action
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <?php foreach ($allTasks as $task) : ?>
+          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+            <td class="w-4 p-4">
+              <div class="flex items-center">
+                <input id="checkbox-table-search-<?php echo $task->id; ?>" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                <label for="checkbox-table-search-<?php echo $task->id; ?>" class="sr-only">checkbox</label>
+              </div>
+            </td>
+            <td class="px-6 py-4">
+              <?php echo $task->id; ?>
+            </td>
+            <td class="px-6 py-4">
+              <?php echo $task->name; ?>
+            </td>
+            <td class="px-6 py-4">
+              <?php echo $task->username; ?>
+            </td>
+            <td class="px-6 py-4">
+              <?php echo $task->create_time; ?>
+            </td>
+            <td class="px-6 py-4">
+              <?php echo $task->completed_time ?? 'Not completed'; ?>
+            </td>
+
+            <td class="px-6 py-4">
+              <?php echo $task->status; ?>
+            </td>
+            <td class="px-6 py-4">
+              <a href="/task/destroy/<?php echo $task->id; ?>" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Eliminar Tarea</a>
+            </td>
+          </tr>
+        <?php endforeach; ?>
+      </tbody>
+    </table>
+  </div>
 </div>
