Update action 1a version

--- a/app/views/scripts/task/index.phtml
+++ b/app/views/scripts/task/index.phtml
@@ -72,6 +72,7 @@ arsort($allTasks);
             </td>
             <td class="px-6 py-4">
               <a href="/task/destroy/<?php echo $task->id; ?>" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Eliminar Tarea</a>
+              <a href="/task/update/<?php echo $task->id; ?>" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Editar Tarea</a>
             </td>
           </tr>
         <?php endforeach; ?>
