function delete with bugs... in process

--- a/app/views/scripts/task/index.phtml
+++ b/app/views/scripts/task/index.phtml
@@ -70,7 +70,9 @@ $allTasks = $this->allTasks;
                 <?php echo $task->status; ?>
               </td>
               <td class="px-6 py-4">
-                <a href="/task/destroy/<?php echo $task->id; ?>" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Eliminar Tarea</a>
+              
+                <a href="/task/delete/<?php echo $task->id; ?>"onclick="return confirm('¿Estás seguro de que deseas eliminar esta tarea?');" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Eliminar Tarea</a>
+                
                 <a href="/task/update/<?php echo $task->id; ?>" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Editar Tarea</a>
               </td>
             </tr>
