--- a/app/views/scripts/task/create.phtml
+++ b/app/views/scripts/task/create.phtml
@@ -1,11 +1,28 @@
-<h1>Crea una nova tasca</h1>
+<div class="fixed inset-0 bg-gray-500 bg-opacity-50 overflow-y-auto h-screen w-screen px-4 md:px-8">
+  <div class="relative z-10 mx-auto max-w-sm rounded-md shadow-lg bg-white p-4 mt-16">
+    <form method="post" class="space-y-4">
+      <h1>Crea una nova tasca</h1>
 
-<form method="post">
-  <label for="name">Nom de la Tasca:</label>
-  <input type="text" id="name" name="name" required><br>
+      <div class="relative shadow-md rounded-md pt-5"> <label for="name" class="block text-sm font-medium text-gray-700 absolute top-0 px-2">Nom de la Tasca:</label>
+        <input type="text" id="name" name="name" required class="mt-2 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50 pl-10">
+      </div>
 
-  <label for="username">Nom d'Usuari:</label>
-  <input type="text" id="username" name="username" required><br>
+      <div class="relative shadow-md rounded-md pt-5"> <label for="username" class="block text-sm font-medium text-gray-700 absolute top-0 px-2">Nom d'Usuari:</label>
+        <input type="text" id="username" name="username" required class="mt-2 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50 pl-10">
+      </div>
 
-  <input type="submit" value="Desar">
-</form>
+      <div class="relative shadow-md rounded-md pt-5"> <label for="created_time" class="block text-sm font-medium text-gray-700 absolute top-0 px-2">Created time:</label>
+        <input type="text" id="created_time" name="created_time" required readonly value="<?php echo date('Y-m-d H:i:s'); ?>" class="mt-2 block w-full border-gray-300 rounded-md shadow-sm bg-gray-200 pl-10">
+      </div>
+
+      <div class="relative shadow-md rounded-md pt-5"> <label for="status" class="block text-sm font-medium text-gray-700 absolute top-0 px-2">Estat de la tasca:</label>
+        <select id="status" name="status" required disabled class="mt-2 block w-full border-gray-300 rounded-md shadow-sm bg-gray-200 pl-10"> <option value="Pendent" selected>Pendent</option>
+        </select>
+      </div>
+
+      <div class="flex justify-center">  
+        <input type="submit" value="Desar" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+      </div>
+    </form>
+  </div>
+</div>
