--- a/app/views/scripts/task/search.phtml
+++ b/app/views/scripts/task/search.phtml
@@ -5,7 +5,30 @@ $allTasks = $this->allTasks;
 arsort($allTasks);
 
 ?>
-
+<nav class="border-gray-200 bg-gray-50 dark:bg-gray-800 dark:border-gray-700">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+      <img width="48" height="48" src="https://img.icons8.com/color/48/nebula.png" class="h-8" alt="nebula" />
+      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">IVANDA</span>
+    </a>
+    <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-solid-bg" aria-expanded="false">
+      <span class="sr-only">Open main menu</span>
+      <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15" />
+      </svg>
+    </button>
+    <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
+      <ul class="flex flex-col font-medium mt-4 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
+        <li>
+          <a href="/" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Show All</a>
+        </li>
+        <li>
+          <a href="/task/create" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Add Task</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <div class="container mx-auto">
   <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
     <div class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
@@ -27,7 +50,6 @@ arsort($allTasks);
             <th scope="col" class="px-6 py-3">
               Completed Time
             </th>
-
             <th scope="col" class="px-6 py-3">
               Status
             </th>
@@ -54,16 +76,21 @@ arsort($allTasks);
               <td class="px-6 py-4">
                 <?php echo $task->completed_time ?? 'Not completed'; ?>
               </td>
-
               <td class="px-6 py-4">
                 <?php echo $task->status; ?>
               </td>
               <td class="px-6 py-4">
-                <a href="/task/destroy/<?php echo $task->id; ?>" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Eliminar Tarea</a>
+                <div class="flex items-center space-x-2">
+                  <a href="/task/delete/<?php echo $task->id; ?>" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">
+                    <img width="25" height="25" src="https://img.icons8.com/windows/32/7e22ce/waste.png" alt="waste" />
+                  </a>
+                  <a href="/task/update/<?php echo $task->id; ?>" data-modal-target="editTask" data-modal-toggle="editTask" class="edit-task-link">
+                    <img width="22" height="22" viewBox="0 0 50 50" src="https://img.icons8.com/forma-regular-filled/24/4D4D4D/edit-file.png" alt="edit-file" />
+                  </a>
               </td>
             </tr>
-          <?php endforeach; ?>
-        </tbody>
-      </table>
+            <?php endforeach; ?>
+          </tbody>
+        </table>
     </div>
   </div>
