--- a/app/views/scripts/task/update.phtml
+++ b/app/views/scripts/task/update.phtml
@@ -40,19 +40,9 @@ $taskDetail = $this->taskDetail;
         <label for="status" class="block text-sm font-medium text-gray-700">Estat de la tasca:</label>
         <select id="status" name="status" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50">
           <option value="Pendent" <?php if ($taskDetail->status == "Pendent") echo 'selected'; ?>>Pendent</option>
-          <option value="En procès" <?php if ($taskDetail->status == "En procès") echo 'selected'; ?>>En procès</option>
+          <option value="En procés" <?php if ($taskDetail->status == "En procés") echo 'selected'; ?>>En procés</option>
           <option value="Completada" <?php if ($taskDetail->status == "Completada") echo 'selected'; ?>>Completada</option>
         </select>
-      </div>
-
-      <div class="flex items-center">
-        <label for="completed_time" class="block text-sm font-medium text-gray-700 mr-2">Completed time:</label>
-        <input type="text" id="completed_time" name="completed_time" required value="<?php echo $taskDetail->completed_time; ?>" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50">
-        <button id="calendarButton" class="ml-2 p-2 border border-gray-300 rounded-md cursor-pointer hover:bg-gray-100">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path d="M6 10l-2 2-4-4 2-2 4-4 2 2zM12 10l-2 2-4-4 2-2 4-4 2 2z" />
-          </svg>
-        </button>
       </div>
 
       <div>
