--- a/app/views/scripts/task/create.phtml
+++ b/app/views/scripts/task/create.phtml
@@ -16,12 +16,15 @@
       </div>
 
       <div class="relative shadow-md rounded-md pt-5"> <label for="status" class="block text-sm font-medium text-gray-700 absolute top-0 px-2">Estat de la tasca:</label>
-        <select id="status" name="status" required disabled class="mt-2 block w-full border-gray-300 rounded-md shadow-sm bg-gray-200 pl-10"> <option value="Pendent" selected>Pendent</option>
+        <select id="status" name="status" required disabled class="mt-2 block w-full border-gray-300 rounded-md shadow-sm bg-gray-200 pl-10">
+          <option value="Pendent" selected>Pendent</option>
         </select>
       </div>
 
-      <div class="flex justify-center">
+      <div class="flex justify-around w-full">
         <input type="submit" value="Desar" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+
+        <a href="/" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-400 hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-300">Cancelar</a>
       </div>
     </form>
   </div>
