--- a/app/views/scripts/task/search.phtml
+++ b/app/views/scripts/task/search.phtml
@@ -1,13 +1,17 @@
 <?php
-
 $allTasks = $this->allTasks;
-
 arsort($allTasks);
-
 ?>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Search</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+
+</head>
 <nav class="border-gray-200 bg-gray-50 dark:bg-gray-800 dark:border-gray-700">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img width="48" height="48" src="https://img.icons8.com/color/48/nebula.png" class="h-8" alt="nebula" />
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">IVANDA</span>
     </a>
