--- a/app/views/scripts/task/update.phtml
+++ b/app/views/scripts/task/update.phtml
@@ -1,7 +1,13 @@
 <?php
 $taskDetail = $this->taskDetail;
 ?>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Edit task</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 
+</head>
 <div class="fixed inset-0 bg-gray-500 bg-opacity-50 overflow-y-auto h-screen w-screen px-4 md:px-8">
   <div class="relative z-10 mx-auto max-w-sm rounded-md shadow-lg bg-white p-4 mt-16">
     <form method="post" class="space-y-4">
