--- a/app/views/scripts/task/create.phtml
+++ b/app/views/scripts/task/create.phtml
@@ -1,8 +1,18 @@
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>New Task</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+
+</head>
+
+<body>
 <div class="fixed inset-0 bg-gray-500 bg-opacity-50 overflow-y-auto h-screen w-screen px-4 md:px-8">
   <div class="relative z-10 mx-auto max-w-sm rounded-md shadow-lg bg-white p-4 mt-16">
-    <form method="post" class="space-y-4">
-      <h1>Crea una nova tasca</h1>
-
+    <form method="post" class="space-y-6">
+      <div class="text-center">
+      <h1 class="text-lg font-bold text-gray-700 font-arial top-1 px-4">Crea una nova tasca</h1>
+      </div>
       <div class="relative shadow-md rounded-md pt-5"> <label for="name" class="block text-sm font-medium text-gray-700 absolute top-0 px-2">Nom de la Tasca:</label>
         <input type="text" id="name" name="name" required minlength="3" maxlength="100" class="mt-2 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50 pl-10">
       </div>
@@ -22,10 +32,11 @@
       </div>
 
       <div class="flex justify-around w-full">
-        <input type="submit" value="Desar" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        <input type="submit" value="Desar" class="inline-flex items-center px-6 py-2 border border-transparent text-sm font-medium rounded-md  text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 cursor-pointer">
 
         <a href="/" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-400 hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-300">Cancelar</a>
       </div>
     </form>
   </div>
 </div>
+</body>
