--- a/app/views/scripts/task/index.phtml
+++ b/app/views/scripts/task/index.phtml
@@ -1,3 +1,6 @@
+<?php
+$allTask = $this-> allTask;
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,15 +9,18 @@
     <title>Tabla de tareas</title>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"  rel="stylesheet" />
 </head>
-<body>
+<body class="bg-purple-800">
     <section class="h-screen flex justify-center items-center">>
     <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-black md:text-5xl lg:text-6xl">Tabla de Tareas</h1>
         <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">sitio donde podras ver todas tus tareas </p>
         <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
-            <span class="flex items-center text-sm font-medium text-gray-900 dark:text-white me-3"><span class="flex w-2.5 h-2.5 bg-blue-600 rounded-full me-1.5 flex-shrink-0"></span>Crear</span>
-            <span class="flex items-center text-sm font-medium text-gray-900 dark:text-white me-3"><span class="flex w-2.5 h-2.5 bg-purple-500 rounded-full me-1.5 flex-shrink-0"></span>Editar</span>
-            <span class="flex items-center text-sm font-medium text-gray-900 dark:text-white me-3"><span class="flex w-2.5 h-2.5 bg-indigo-500 rounded-full me-1.5 flex-shrink-0"></span>Borrar</span>
+            <span class="flex items-center text-2xl font-bold text-gray-900 dark:text-white me-3"><span class="flex w-2.5 h-2.5 bg-blue-600 rounded-full me-1.5 flex-shrink-0"></span>
+            <a href="<?php echo WEB_ROOT ?>/create"> Crear </a> </span>
+            <span class="flex items-center text-2xl font-bold text-gray-900 dark:text-white me-3"><span class="flex w-2.5 h-2.5 bg-purple-500 rounded-full me-1.5 flex-shrink-0"></span>
+            <a href="<?php echo WEB_ROOT ?>/update"> Editar </a> </span>
+            <span class="flex items-center text-2xl font-bold text-gray-900 dark:text-white me-3"><span class="flex w-2.5 h-2.5 bg-indigo-500 rounded-full me-1.5 flex-shrink-0"></span>
+            <a href="<?php echo WEB_ROOT ?>/delete"> Borrar </a> </span>
             
 </div> 
   
@@ -30,19 +36,15 @@
                 </tr>
             </thead>
             <tbody>
+            <?php foreach ($allTask as $task): ?>
                 <tr>
-                    <td class="px-4 py-2 font-medium text-gray-900 whitespace-nowrap">Flowbite</td>
-                    <td class="px-4 py-2">2021/25/09</td>
-                    <td class="px-4 py-2">269000</td>
-                    <td class="px-4 py-2">49%</td>
+                <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['title']); ?></td>
+                <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['status']); ?></td>
+                <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['user']); ?></td>
+                <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['startDate']); ?></td>
+                <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['deadline']); ?></td>
                 </tr>
-                <tr>
-                    <td class="px-4 py-2 font-medium text-gray-900 whitespace-nowrap">React</td>
-                    <td class="px-4 py-2">2013/24/05</td>
-                    <td class="px-4 py-2">4500000</td>
-                    <td class="px-4 py-2">24%</td>
-                </tr>
-                
+                <?php endforeach; ?>
         
     </tbody>
 </table>
