ya funciona el edit

--- a/app/views/scripts/task/update.phtml
+++ b/app/views/scripts/task/update.phtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear tarea</title>
+    <title>Editar tarea</title>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"  rel="stylesheet" />
 </head>
 <body>
@@ -13,7 +13,7 @@
 </div>
 
 
-<form action="<?php echo WEB_ROOT; ?>/update" method="POST" class="max-w-md mx-auto">
+<form action="<?php echo WEB_ROOT; ?>/update/<?php echo $task['id']; ?>" method="POST" class="max-w-md mx-auto">
   
   <div class="relative z-0 w-full mb-5 group">
       <input type="text" name="title" value="<?php echo $this->task['title']; ?>" class="block py-2.5 px-0 w-full text-sm text-gray-500 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
