--- a/app/views/scripts/task/delete.phtml
+++ b/app/views/scripts/task/delete.phtml
@@ -15,8 +15,11 @@
 </div>
 
 <form action="<?php echo WEB_ROOT; ?>/delete" method="POST" class="max-w-md mx-auto">
-<label for="task_id">Ingrese el ID de la tarea a eliminar:</label>
+<div style="display: flex; justify-content: center; align-items: center;">
     <input type="number" name="task_id" id="task_id" required />
-    <button type="submit">Eliminar tarea</button>
+    <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Eliminar tarea</button>
+</div>
+</form>
+
 </body>
 </html>
