--- a/app/views/scripts/task/update.phtml
+++ b/app/views/scripts/task/update.phtml
@@ -21,9 +21,9 @@
   </div>
   <div class="relative z-0 w-full mb-5 group">
     <select name="status" id="status" class="block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" required>
-        <option value="Pendiente" <?php echo $this->task['status'] == 'New' ? 'selected' : ''; ?>>Pendiente</option>
-        <option value="En proceso" <?php echo $this->task['status'] == 'New' ? 'selected' : ''; ?>>En proceso</option>
-        <option value="Terminado" <?php echo $this->task['status'] == 'New' ? 'selected' : ''; ?>>Terminado</option>
+        <option value="Pendiente" style="background-color: #000000" <?php echo $this->task['status'] == 'New' ? 'selected' : ''; ?>>Pendiente</option>
+        <option value="En proceso" style="background-color: #000000" <?php echo $this->task['status'] == 'New' ? 'selected' : ''; ?>>En proceso</option>
+        <option value="Terminado" style="background-color: #000000" <?php echo $this->task['status'] == 'New' ? 'selected' : ''; ?>>Terminado</option>
     </select>
     <label for="status" class="peer-focus:font-medium absolute text-sm text-white dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Status</label>
 </div>
