--- a/app/views/scripts/task/updateid.phtml
+++ b/app/views/scripts/task/updateid.phtml
@@ -15,9 +15,11 @@
 </div>
 
 <form action="<?php echo WEB_ROOT; ?>/updateId" method="POST" class="max-w-md mx-auto">
+<div style="display: flex; justify-content: center; align-items: center;">
     <input type="number" name="task_id" value="<?php echo $task['id']; ?>" required />
     <a href="<?php echo WEB_ROOT ?>/update/<?php echo $task['id']; ?>">
     <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Editar tarea</button>
+    </div>
 </form>
 
 </body>
